Update notebook with new timestamp and save enhancements
Updated the generated timestamp and enhanced the save functionality to detect and display only changed rows.

--- a/practice/table_editors/release_table_editor_advanced.ipynb
+++ b/practice/table_editors/release_table_editor_advanced.ipynb
@@ -16,7 +16,7 @@
     "### Usage Guide\n",
     "\n",
     "*   **Author:** regnaer\n",
-    "*   **Generated:** 2025-10-01 02:42:30 UTC\n",
+    "*   **Generated:** 2025-10-01 03:07:33 UTC\n",
     "*   **Purpose:** This notebook provides a user-friendly interface to directly edit records in the `gc_prod_sandbox.su_eric_regna.metarisk_releases_dim` table.\n",
     "\n",
     "**How to Use This Editor:**\n",
@@ -139,7 +139,9 @@
     "        return pd.DataFrame(columns=columns)\n",
     "\n",
     "# --- CHOOSE DATA SOURCE --- #\n",
-    "df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)"
+    "# Load the initial data and keep a copy for comparison on save.\n",
+    "original_df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)\n",
+    "df = original_df.copy() # Use a copy for the grid to keep the original intact"
    ]
   },
   {
@@ -272,14 +274,32 @@
     "        output_area.clear_output()\n",
     "        status_html.value = f\"<p style='color:blue'>Saving... Please wait.</p>\"\n",
     "        try:\n",
-    "            # Get the updated data from the 'grid' key of the grid_data_out dictionary.\n",
+    "            # Get the updated data from the grid.\n",
     "            updated_df = grid.grid_data_out['grid']\n",
     "            \n",
-    "            print(\"Data to be saved:\")\n",
-    "            display(updated_df.head())\n",
+    "            # --- ENHANCEMENT: Find and display only the changed rows --- #\n",
+    "            # Prepare DataFrames for comparison\n",
+    "            orig = original_df.set_index(PRIMARY_KEY).fillna('')\n",
+    "            updated = updated_df.set_index(PRIMARY_KEY).fillna('')\n",
+    "            # Align columns just in case\n",
+    "            updated = updated[orig.columns]\n",
+    "            \n",
+    "            # Find rows where any value has changed\n",
+    "            changed_mask = (orig != updated).any(axis=1)\n",
+    "            changed_rows = updated_df[changed_mask.values]\n",
+    "\n",
+    "            if not changed_rows.empty:\n",
+    "                print(\"Rows with detected changes to be saved:\")\n",
+    "                display(changed_rows)\n",
+    "            else:\n",
+    "                print(\"No changes detected.\")\n",
+    "                status_html.value = f\"<p style='color:orange'>No changes detected to save.</p>\"\n",
+    "                return # Exit the function if no changes\n",
+    "            # -------------------------------------------------------- #\n",
     "            \n",
     "            # --- DATABRICKS INTEGRATION --- #\n",
     "            print(f\"\\nConverting to Spark DataFrame and merging into {TABLE_FQN}...\")\n",
+    "            # Use the full updated_df for the merge, not just the changed rows\n",
     "            updated_spark_df = spark.createDataFrame(updated_df)\n",
     "            updated_spark_df.createOrReplaceTempView(\"temp_updates_for_merge\")\n",
     "            \n",
@@ -302,6 +322,10 @@
     "            \n",
     "            status_html.value = f\"<p style='color:green'>Data saved to {TABLE_FQN} successfully at {datetime.now().strftime('%H:%M:%S')}</p>\"\n",
     "            print(\"\\nSave operation completed.\")\n",
+    "            \n",
+    "            # IMPORTANT: Update the original_df to match the new state\n",
+    "            global original_df\n",
+    "            original_df = updated_df.copy()\n",
     "\n",
     "        except Exception as e:\n",
     "            error_message = f\"Error saving data: {str(e)}\"\n",
@@ -313,13 +337,14 @@
     "        output_area.clear_output()\n",
     "        status_html.value = f\"<p style='color:blue'>Refreshing data from {TABLE_FQN}...</p>\"\n",
     "        try:\n",
+    "            global original_df\n",
     "            refreshed_df = load_data_from_databricks(TABLE_FQN, COLUMNS_TO_DISPLAY)\n",
-    "            # Use update_grid_data with a positional argument.\n",
+    "            # Update both the grid and the original_df reference\n",
+    "            original_df = refreshed_df.copy()\n",
     "            grid.update_grid_data(refreshed_df)\n",
     "            status_html.value = f\"<p style='color:green'>Grid data refreshed at {datetime.now().strftime('%H:%M:%S')}</p>\"\n",
     "        except Exception as e:\n",
     "            error_message = f\"Error refreshing data: {str(e)}\"\n",
-
     "            print(error_message)\n",
     "            status_html.value = f\"<p style='color:red'>{error_message}</p>\"\n",
     "\n",
